# GameEngineMac

./: CMakeLists.txt  README.md  imgui_impl_glfw_gl3.cpp  main.cpp  shader.h
resources/shaders/: core.frag  core.vert  core.vs
